# python-rust

./: Dockerfile  README.md  docker-compose.yaml  measurements.py  requirements.txt
rust_projects/calculations_rs/: Cargo.toml  pyproject.toml
rust_projects/calculations_rs/src/: lib.rs
