[package]
name = "calculations_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "calculations_rs"
crate-type = ["cdylib"]

[profile.release]
debug = true
lto = true
codegen-units = 1

[dependencies]
#tokio = { version = "1", features = ["full"] }
pyo3 = { version = "0.17"}
#numpy = "0.21"
#ndarray = "0.15"
#ndarray-linalg = "0.16"


